# water-quality-monitoring

./: .env.example  .gitignore  .mcp.json.example  CLAUDE.md  README.md  app.py  build_animation.py  requirements-lock.txt  requirements.txt  test_smoke.py  启动.bat
river_model/: __init__.py  animation.py  config.py  cross_sections.py  geo_mapping.py  hecras_bridge.py  hydro_engine.py  pure_py_hydro.py  state.py  tools.py  visualization.py  wq_engine.py
water_quality_mcp/: pyproject.toml
water_quality_mcp/src/water_quality_mcp/: analysis.py  charts.py  config.py  font_utils.py  geo_tools.py  loaders.py  national_station.py  report.py  server.py  state.py
苗圃杯/无人船智能水质监测分析和因果溯源样本数据/: 河道巡航走航样本数据.xlsx
