[project]
name = "water-quality-mcp"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "opencv-python>=4.8",
    "matplotlib>=3.7",
    "folium>=0.17",
    "openai>=1.0",
    "requests>=2.28",
    "openpyxl>=3.0",
    "streamlit>=1.28",
]

[project.scripts]
water-quality-mcp-py = "water_quality_mcp.server:main"

[tool.setuptools.package-dir]
"water_quality_mcp" = "src/water_quality_mcp"
